<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_relative_layout_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/activity_main_button_duo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/activity_main_button_duo"/>

        <Button
            android:id="@+id/activity_main_button_solo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_main_button_duo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/activity_main_button_solo"/>

        <Button
            android:id="@+id/activity_main_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_main_button_solo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/activity_main_button_settings"/>

        <ImageView
            android:id="@+id/activity_main_image_view_logo_mohren"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/activity_main_image_view_logo_mohren"
            android:src="@drawable/logo_mohren_rotate" />

</RelativeLayout>

