<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_solo_relative_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/activity_solo_linear_layout_focus"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <requestFocus />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_solo_relative_layout_separator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/activity_solo_edit_text_lhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/activity_solo_relative_layout_separator"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:cursorVisible="false"
        android:gravity="center"
        android:hint="@string/activity_solo_edit_text_lhs"
        android:inputType="text"
        android:maxLength="15"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/activity_solo_edit_text_rhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/activity_solo_relative_layout_separator"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:cursorVisible="false"
        android:gravity="center"
        android:hint="@string/activity_solo_edit_text_rhs"
        android:inputType="text"
        android:maxLength="15"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/activity_solo_button_reverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/activity_solo_relative_layout_separator"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/activity_solo_button_reverse"/>

    <Button
        android:id="@+id/activity_solo_button_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/activity_solo_relative_layout_separator"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/activity_solo_button_new_game" />

    <Button
        android:id="@+id/activity_solo_button_add_points_lhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_solo_button_reverse"
        android:layout_below="@+id/activity_solo_edit_text_lhs"
        android:layout_alignEnd="@+id/activity_solo_relative_layout_separator"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@null"/>

    <Button
        android:id="@+id/activity_solo_button_add_points_rhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_solo_button_new_game"
        android:layout_below="@+id/activity_solo_edit_text_rhs"
        android:layout_alignStart="@+id/activity_solo_relative_layout_separator"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@null"/>

    <ImageView
        android:id="@+id/activity_solo_image_view_visualization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_solo_button_reverse"
        android:layout_below="@+id/activity_solo_edit_text_lhs"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/activity_solo_image_view_visualization" />
</RelativeLayout>